<resources>
    <string name="app_name">HobbyInventory</string>
    <string name="Header">Collections</string>
    <string name="add_image">add image</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="imgDes">image of item</string>
    <string name="deleteItem">delete item</string>
    <string name="description">description</string>
    <string name="item_name">Item Name</string>
    <string name="Create">Create collection</string>
    <string name="create_item">Create item</string>
    <string name="edit">edit</string>
    <string name="collection_name">Collection Name</string>
    <string name="CollectionName">Collection</string>
    <string name="add_item">add item</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete this item?</string>
    <string name="dialog_confirm_deleteCollection">Are you sure you want to delete this collection?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>