<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Header"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/tvCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="onClickCreate"
        android:text="@string/Create"
        android:layout_alignBottom="@id/tvFooter"
        android:layout_marginLeft="15dp"
        />

    <Button
        android:id="@+id/tvSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="onClickSave"
        android:text="@string/save"
        android:layout_alignBottom="@id/tvFooter"
        android:layout_marginLeft="15dp"
        >




    </Button>

    <ListView
        android:id="@+id/collectionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:layout_above="@id/tvCreateButton"/>

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>